--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,6 @@
-# Compiled class file
-*.class
+# Created by .ignore support plugin (hsz.mobi)
+.gradle/
+.idea/
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+build/
+*.iml
