--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qingmei2.sample_androidtest">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".a01simple.A01SimpleActivity" />
-        <activity android:name=".a02async.A02AsyncActivity"></activity>
+        <activity android:name=".a02async.A02AsyncActivity"/>
     </application>
 
 </manifest>
