--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qingmei2.sample_androidtest">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".a01simple.A01SimpleActivity" />
-        <activity android:name=".a02async.A02AsyncActivity"/>
+        <activity android:name=".a02async.A02AsyncActivity" />
+        <activity android:name=".a03list.A03ListActivity"></activity>
     </application>
 
 </manifest>
