--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,16 @@ dependencies {
         exclude module: 'design'
         exclude module: 'recyclerview-v7'
     }
+    androidTestCompile('com.android.support.test.espresso:espresso-idling-resource:2.2.2') {
+        exclude module: 'support-annotations'
+    }
+    androidTestCompile('com.android.support.test:runner:0.5') {
+        exclude module: 'support-annotations'
+    }
+    androidTestCompile('com.android.support.test:rules:0.5') {
+        exclude module: 'support-annotations'
+    }
 
-    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
@@ -39,8 +47,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test:runner:0.5'
-    androidTestCompile 'com.android.support.test:rules:0.5'
-    androidTestCompile 'com.android.support:support-annotations:25.3.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
