--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,11 @@
         <activity android:name=".a01simple.A01SimpleActivity" />
         <activity android:name=".a02async.A02AsyncActivity" />
         <activity android:name=".a03list.A03ListActivity" />
-        <activity android:name=".a04rotate.A04RotateActivity"></activity>
+        <activity android:name=".a04rotate.A04RotateActivity" />
+        <activity
+            android:name=".a05toolbar.A05ToolbarActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+        <activity android:name=".a06_async_dialog_fragment.A06AsyncActivity2"></activity>
     </application>
 
 </manifest>
