--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".a08_async_dagger2.MyApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -26,7 +27,8 @@
             android:name=".a05toolbar.A05ToolbarActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".a06_async_dialog_fragment.A06AsyncActivity2" />
-        <activity android:name=".a07_async_okhttp.A07OkhttpActivity"/>
+        <activity android:name=".a07_async_okhttp.A07OkhttpActivity" />
+        <activity android:name=".a08_async_dagger2.A08Dagger2Activity"/>
     </application>
 
 </manifest>
