--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,13 @@
+buildscript {
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'me.tatarka:gradle-retrolambda:3.3.1'
+    }
+}
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
