--- a/local.properties
+++ b/local.properties
@@ -7,6 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Jun 25 12:20:24 GMT+08:00 2017
-ndk.dir=M\:\\AndroidStudio\\sdk\\ndk-bundle
-sdk.dir=M\:\\AndroidStudio\\sdk
+#Mon Jun 26 10:34:12 CST 2017
+sdk.dir=/Users/fcn-mq/Library/Android/sdk
