--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,21 +35,30 @@ android {
     }
 }
 
+final DAGGER_VERSION = '2.7'
+final RETROFIT_VERSION = '2.1.0'
+final OKHTTP_VERSION = '1.3.1'
+final LOMBOK_VERSION = '1.16.16'
+final BUTTERKNIFE_VERSION = '8.5.1'
+final SUPPORT_VERSION = '25.3.1'
+final ESPRESSO_VERSION = '2.2.2'
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //Junit
     testCompile 'junit:junit:4.12'
     //espresso
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestCompile("com.android.support.test.espresso:espresso-core:${ESPRESSO_VERSION}", {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+    androidTestCompile("com.android.support.test.espresso:espresso-contrib:${ESPRESSO_VERSION}") {
+
         exclude module: 'support-annotations'
         exclude module: 'support-v4'
         exclude module: 'design'
         exclude module: 'recyclerview-v7'
     }
-    androidTestCompile('com.android.support.test.espresso:espresso-idling-resource:2.2.2') {
+    androidTestCompile("com.android.support.test.espresso:espresso-idling-resource:${ESPRESSO_VERSION}") {
         exclude module: 'support-annotations'
     }
     androidTestCompile('com.android.support.test:runner:0.5') {
@@ -58,36 +67,37 @@ dependencies {
     androidTestCompile('com.android.support.test:rules:0.5') {
         exclude module: 'support-annotations'
     }
-    androidTestCompile ('com.jakewharton.espresso:okhttp3-idling-resource:1.0.0'){
+    androidTestCompile('com.jakewharton.espresso:okhttp3-idling-resource:1.0.0') {
         exclude module: 'support-annotations'
         exclude module: 'okhttp'
     }
     //android support
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
+    compile "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
+    compile "com.android.support:design:${SUPPORT_VERSION}"
+    compile "com.android.support:recyclerview-v7:${SUPPORT_VERSION}"
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     //dagger2
-    compile 'com.jakewharton:butterknife:8.5.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
-    compile 'com.google.dagger:dagger:2.7'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.7'
-    androidTestAnnotationProcessor 'com.google.dagger:dagger-compiler:2.7'
+    compile "com.jakewharton:butterknife:${BUTTERKNIFE_VERSION}"
+    annotationProcessor "com.jakewharton:butterknife-compiler:${BUTTERKNIFE_VERSION}"
+    compile "com.google.dagger:dagger:${DAGGER_VERSION}"
+    annotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
+    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:${DAGGER_VERSION}"
     //rx+retrofit
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.retrofit2:retrofit-mock:2.1.0'
+    compile "com.squareup.retrofit2:retrofit:${RETROFIT_VERSION}"
+    compile "com.squareup.retrofit2:converter-gson:${RETROFIT_VERSION}"
+    compile "com.squareup.retrofit2:adapter-rxjava:${RETROFIT_VERSION}"
+    compile "com.squareup.retrofit2:retrofit-mock:${RETROFIT_VERSION}"
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.2'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.2.3'
     //okhttp
-    compile 'com.facebook.stetho:stetho-okhttp3:1.3.1'
-    compile 'com.facebook.stetho:stetho:1.3.1'
+    compile "com.facebook.stetho:stetho-okhttp3:${OKHTTP_VERSION}"
+    compile "com.facebook.stetho:stetho:${OKHTTP_VERSION}"
     //stream
     compile 'com.annimon:stream:1.1.7'
     //lombok
-    provided 'org.projectlombok:lombok:1.16.16'
-    annotationProcessor 'org.projectlombok:lombok:1.16.16'
+    provided "org.projectlombok:lombok:${LOMBOK_VERSION}"
+    annotationProcessor "org.projectlombok:lombok:${LOMBOK_VERSION}"
 }
+
