--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,11 @@ dependencies {
         exclude module: 'support-annotations'
         exclude module: 'okhttp'
     }
+    //mockito
+    testCompile "org.mockito:mockito-core:2.8.9"
+    androidTestCompile "org.mockito:mockito-android:2.8.9"
+    androidTestCompile "com.google.dexmaker:dexmaker:1.2"
+    androidTestCompile "com.google.dexmaker:dexmaker-mockito:1.2"
     //android support
     compile "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
     compile "com.android.support:design:${SUPPORT_VERSION}"
