--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,8 @@
         <activity android:name=".a_espresso.a08_async_dagger2.A08Dagger2Activity"/>
 
         <activity android:name=".b_mockito.B00IndexActivity"/>
+        <activity android:name=".b_mockito.b01simple.B01SimpleActivity"/>
+
     </application>
 
 </manifest>
