--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         testInstrumentationRunner "com.qingmei2.sample_androidtest.a_espresso.a08_async_dagger2.ServiceTestRunner"
     }
     compileOptions {
@@ -52,7 +51,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     androidTestCompile("com.android.support.test.espresso:espresso-contrib:${ESPRESSO_VERSION}") {
-
         exclude module: 'support-annotations'
         exclude module: 'support-v4'
         exclude module: 'design'
@@ -79,6 +77,7 @@ dependencies {
     androidTestCompile "org.mockito:mockito-android:2.8.9"
     //robolectric
     testCompile "org.robolectric:robolectric:3.3.2"
+    testCompile "org.robolectric:shadows-support-v4:3.3.2"
     //android support
     compile "com.android.support:appcompat-v7:${SUPPORT_VERSION}"
     compile "com.android.support:design:${SUPPORT_VERSION}"
